force-app/main/default/objects/SPEN_MetricSnapshot__c/SPEN_MetricSnapshot__c.object-meta.xml
<CustomObject>
    <label>Metric Snapshot</label>
    <nameField>
        <displayFormat>MTR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metric Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>