force-app/main/default/objects/SPEN_MetricSnapshot__c/fields/SPEN_CallGroup__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CallGroup__c</fullName>
    <label>Call Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>