force-app/main/default/objects/SPEN_MetricSnapshot__c/fields/SPEN_KM2__c.field-meta.xml
<CustomField>
    <fullName>SPEN_KM2__c</fullName>
    <label>KM2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>