force-app/main/default/objects/SPEN_MetricSnapshot__c/fields/SPEN_KM5Percent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_KM5Percent__c</fullName>
    <label>KM5d%</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>