force-app/main/default/objects/SPEN_MetricSnapshot__c/fields/SPEN_MetricDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MetricDate__c</fullName>
    <label>Metric Date</label>
    <type>Date</type>
</CustomField>