force-app/main/default/objects/SPEN_MetricSnapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_MetricDate__c</columns>
    <columns>SPEN_CallGroup__c</columns>
    <columns>SPEN_ExternalId__c</columns>
    <columns>SPEN_KM1__c</columns>
    <columns>SPEN_KM2__c</columns>
    <columns>SPEN_KM3__c</columns>
    <columns>SPEN_KM4__c</columns>
    <columns>SPEN_KM5__c</columns>
    <columns>SPEN_KM5Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>